--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,9 +44,11 @@
     <string name="confirm">Confirm</string>
     <string name="verify_email">Verify your email</string>
     <string name="verify_email_msg">Enter the verification code\njust send you on</string>
-    <string name="resend_email">if you didn\'t receive a code ? Resend</string>
+    <string name="resend_email">didn\'t receive email?</string>
+    <string name="resend">Resend</string>
     <string name="otp_verify_sucessfully">OTP Verified Successfully</string>
     <string name="otp_does_not_match">OTP does not match</string>
+    <string name="otp_expired">OTP Expired</string>
 
 
 </resources>
