Committed by Vishal : Implement user's login data store into data storage.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="apkZube">apkZube</string>
     <string name="google_login_fail_msg">Google sign in failed</string>
     <string name="user_id_key">user_id_key</string>
+    <string name="no_user_login">No user login.</string>
 
 
 </resources>
