Committed by Vishal : code optimized in login activity and update layout of login activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,8 @@
     <string name="google_login_fail_msg">Google sign in failed</string>
     <string name="user_id_key">user_id_key</string>
     <string name="no_user_login">No user login.</string>
+    <string name="facrbook_auth_fail">Authentication failed Facebook.</string>
+    <string name="facrbook_auth_canceled">Facebook Login Canceled</string>
 
 
 </resources>
